# Face-Classification-Android

./: README.md  build.gradle.kts  settings.gradle.kts
docs/: index.html  navigation.html  package-list
docs/face-classification-core/: index.html
docs/face-classification-core/com.appliedrec.verid3.faceclassification/: index.html
docs/face-classification-face-covering/: index.html
docs/face-classification-glasses/: index.html
docs/face-classification-id-card-face/: index.html  navigation.html
docs/face-covering/: index.html  navigation.html
docs/glasses/: index.html
docs/id-card-face/: index.html
docs/lib/: index.html
docs/scripts/: pages.json  sourceset_dependencies.js
face-classification-core/: build.gradle.kts
face-classification-core/src/main/cpp/: FaceClassifier.cpp  (+1 more)
face-classification-face-covering/: build.gradle.kts
face-classification-glasses/: build.gradle.kts
face-classification-id-card-face/: build.gradle.kts
face-covering/: build.gradle.kts
glasses/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
id-card-face/: build.gradle.kts
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  FaceClassifier.h  conversion.cpp  jniglue.cpp
lib/src/main/cpp/Lib-Internal/applog/: applog.hpp  assert.cpp  assert.hpp  filter_sink.hpp  internal.cpp  internal.hpp  logger.hpp  ostream_sink.cpp  ostream_sink.hpp
lib/src/main/cpp/Lib-Internal/core/: Makefile  context.cpp  context_settings.hpp  parallelize.hpp  thread_data.cpp
lib/src/main/cpp/Lib-Internal/core/tests/: job_queue.cpp  rounding.cpp
lib/src/main/cpp/Lib-Internal/det/: Makefile  detection_internal.hpp  detection_settings.cpp  detection_settings.hpp  internal.hpp  internal_landmarks.hpp  nms.hpp  pose.cpp  pose.hpp  rfb320_common.hpp  types.hpp
lib/src/main/cpp/Lib-Internal/det/tests/: image.cpp
lib/src/main/cpp/Lib-Internal/det_dlib/: classifiers.cpp  dlib5.cpp  dlib68.cpp  facemesh.cpp  init.hpp  internal.hpp  v7_retinaface.cpp  yolonet.hpp
lib/src/main/cpp/Lib-Internal/det_dlib/tests/: classifiers.cpp  detection.cpp
lib/src/main/cpp/Lib-Internal/det_ncnn/: ncnn_common.cpp
lib/src/main/cpp/Lib-Internal/det_tflite/: Makefile  init.cpp  init.hpp  internal.hpp  mesh478.cpp  v8_blazeface.cpp
lib/src/main/cpp/Lib-Internal/det_tflite/tests/: detection.cpp
lib/src/main/cpp/Lib-Internal/dlibx/: .gitignore  atomic_counter.hpp  blas_openblas.cpp  chip_details.cpp  conv.hpp  conv_blas.cpp  conv_blas.hpp  dnn_add_cropped.hpp  dnn_batch_centering.hpp  dnn_bias_mode.hpp  dnn_condw.hpp  dnn_convert.hpp  dnn_input_frames.hpp  dnn_input_generic_image.hpp  dnn_lambda.hpp  dnn_loss_metric.cpp  dnn_loss_softmax_log.hpp  dnn_padding.hpp  dnn_project.hpp  dnn_relun.hpp  dnn_resize.hpp  dnn_sum_neighbours.hpp  dnn_traits.hpp  img2col.hpp  input_extractor.hpp  input_extractor_box.hpp  input_extractor_eyecrop.hpp  lbpcascade_dlibqual0.ipp  library_init.hpp  linear_regression.cpp  linear_stats.hpp  matrix_ops.hpp  matrix_ops_armv7l.cpp  matrix_ops_x86_detect.cpp  net_convert.cpp  net_convert.hpp  net_layer.cpp  net_layer_impl_fc.hpp  net_layer_impl_input.hpp  net_vector.cpp  (+7 more)
lib/src/main/cpp/Lib-Internal/dlibx/tests/: input_extractor.cpp  lmcon.cpp  matrix_q16.cpp
lib/src/main/cpp/Lib-Internal/json/: .gitignore  amf3_encode_helpers.hpp  amf3_stream_type.hpp  encode.cpp  encode_json_helpers.hpp  io_manip.cpp  is_simple.hpp  json.hpp  pull_encode_amf3.hpp  pull_encode_cbor.hpp  pull_encode_json.cpp  pull_types.hpp  push_decode.hpp  push_decode_amf3.cpp  push_decode_amf3.hpp  push_decode_json.hpp  types.hpp  zlib.hpp
lib/src/main/cpp/Lib-Internal/json/tests/: amf3_tests.cpp  basic_tests.cpp  binarystream.cpp  io.cpp  sample_array.amf3  sample_array.json  sample_object_1.amf3
lib/src/main/cpp/Lib-Internal/models/: Makefile  loader_impl.hpp
lib/src/main/cpp/Lib-Internal/nist/: .gitignore  Makefile  notes.txt
lib/src/main/cpp/Lib-Internal/nv2ncnn/: Makefile  nv2ncnn.cpp
lib/src/main/cpp/Lib-Internal/nv2tflite/: .gitignore  conv_tools.hpp  float16.hpp  tflite_infer.cpp
lib/src/main/cpp/Lib-Internal/raw_image/: adjust.cpp  adjust.hpp  color_convert.hpp  concat.hpp  core.cpp  drawing.cpp  face_landmarks.hpp  image_quality.cpp  image_quality.hpp  input_extractor.cpp  input_extractor.hpp  input_extractor_retina.cpp  linear_regression.cpp  linear_regression.hpp  opencv.hpp  pixels.hpp  point2.hpp  point_rounding.hpp  reader.cpp  reader_rotate.cpp  transform.hpp
lib/src/main/cpp/Lib-Internal/raw_image/tests/: points.cpp  span.cpp  transform.cpp
lib/src/main/cpp/Lib-Internal/raw_image_3d/: Makefile  io.cpp  pointcloud.cpp
lib/src/main/cpp/Lib-Internal/raw_image_io/: binary_file_mapping.hpp  io.hpp  jpeg.hpp  png.hpp  png_enable.cpp  tiff.hpp  tiff_disable.cpp
lib/src/main/cpp/Lib-Internal/raw_image_io/tests/: image_077.tiff  image_077_bw.tiff  path.cpp  save.cpp
lib/src/main/cpp/Lib-Internal/rec/: cluster_1.cpp  compare.cpp  formats.txt  fpvc.cpp  fpvc.hpp  internal.cpp  internal_cluster_1.hpp  internal_engine.hpp  internal_multiface.hpp  internal_multiface_2.hpp  internal_multiface_3.hpp  model.cpp  model.hpp  multiface_2.cpp  multiface_3.cpp  prototype.cpp  prototype.hpp  subject.hpp  transcribe_16_to_20.ipp  types.hpp
lib/src/main/cpp/Lib-Internal/rec/tests/: fpvc.cpp  random_prototype.cpp
lib/src/main/cpp/Lib-Internal/rec_dlib/: Makefile  extract.hpp  internal.hpp  model.hpp  model_load.cpp
lib/src/main/cpp/Lib-Internal/rec_ncnn/: engine.cpp  engine.hpp  extract.cpp  internal.hpp  models.hpp
lib/src/main/cpp/Lib-Internal/rec_ncnn/tests/: init.cpp
lib/src/main/cpp/Lib-Internal/render/: diagnostics.hpp  dlib_pose.ipp  frontalize.hpp  frontalize_align.cpp  opencv_fill.hpp  opencv_operators.hpp  render.cpp  render.hpp
lib/src/main/cpp/Lib-Internal/stdext/: aligned_alloc.hpp  binary.hpp  bswap.hpp  identity.hpp  options_tuple.hpp  path_traits.hpp  uninitialized_resize.hpp
lib/src/main/cpp/Lib-Internal/tools/: FaceDetectionRecognition.cpp  FaceDetectionRecognition.hpp  ImageQualityDetection.hpp  Makefile  profiler.cpp-broken
(+334 files in other folders)
